--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,12 @@ jobs:
 
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
+
+      - name: Code Coverage
+        run: ./gradlew koverHtmlReport
+
+      - name: Upload Code Coverage Report
+        uses: actions/upload-artifact@v2
+        with:
+            name: code-coverage-report
+            path: app/build/artifacts/reports/kover/coverageResults/index.html
