--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,11 +32,17 @@ jobs:
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
 
+  code-coverage:
+    needs: test
+    if: ${{ steps.unit-tests.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    steps:
       - name: Code Coverage
         run: ./gradlew koverHtmlReport
 
       - name: Upload Code Coverage Report
         uses: actions/upload-artifact@v2
         with:
-            name: code-coverage-report
-            path: app/build/artifacts/reports/kover/coverageResults/index.html
+          name: code-coverage-report
+          path: app/build/artifacts/reports/kover/coverageResults/index.html
+
