--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -6,7 +6,7 @@ on:
       types:
          - completed
 jobs:
-  test:
+  code_coverage:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout GIT
